Major code cleanup Added Whois & Dns Pages Prepped for Deployment
